# marimo-xmas-options

./: .gitignore  christmas-theme.css  pyproject.toml  requirements.txt
.github/scripts/: build.py
.github/workflows/: deploy.yml
notebooks/: christmas_venues.py  theme.css
