[tool.poetry]
name = "marimo-xmas-options"
version = "0.1.0"
description = "Marimo notebooks for Christmas options"
authors = ["Holly Brooks Holly.brooks@dsit.gov.uk"]

[tool.poetry.dependencies]
python = "^3.12"
marimo = "*"
uv = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"